--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "legal_document_search"}]
 python = "^3.10"
 pre-commit = "^3.3.3"
 pymilvus = "^2.2.13"
+mypy = "^1.6.1"
 
 
 [build-system]
